crates/sifr/src/shell/snapshots/sifr__shell__presentation__tests__every_repo_theme_derives_its_own_palette@gruvbox-light.snap
---
source: crates/sifr/src/shell/presentation.rs
expression: colors
---
Colors {
    background: Rgb(
        [
            251,
            241,
            199,
        ],
    ),
    window_background: Rgb(
        [
            242,
            229,
            188,
        ],
    ),
    text: Rgb(
        [
            60,
            56,
            54,
        ],
    ),
    accent: Rgb(
        [
            175,
            58,
            3,
        ],
    ),
    accent2: Rgb(
        [
            181,
            118,
            20,
        ],
    ),
    selection_foreground: Rgb(
        [
            60,
            56,
            54,
        ],
    ),
    selection_background: Rgb(
        [
            194,
            183,
            152,
        ],
    ),
    highlight: Rgb(
        [
            175,
            58,
            3,
        ],
    ),
    muted_foreground: Rgb(
        [
            124,
            111,
            100,
        ],
    ),
    bar_groove: Rgb(
        [
            191,
            180,
            150,
        ],
    ),
    spectrum: [
        Rgb(
            [
                121,
                116,
                14,
            ],
        ),
        Rgb(
            [
                181,
                118,
                20,
            ],
        ),
        Rgb(
            [
                157,
                0,
                6,
            ],
        ),
    ],
}
