crates/sifr/src/shell/snapshots/sifr__shell__presentation__tests__every_repo_theme_derives_its_own_palette@gruvbox.snap
---
source: crates/sifr/src/shell/presentation.rs
expression: colors
---
Colors {
    background: Rgb(
        [
            40,
            40,
            40,
        ],
    ),
    window_background: Rgb(
        [
            50,
            48,
            47,
        ],
    ),
    text: Rgb(
        [
            235,
            219,
            178,
        ],
    ),
    accent: Rgb(
        [
            254,
            128,
            25,
        ],
    ),
    accent2: Rgb(
        [
            250,
            189,
            47,
        ],
    ),
    selection_foreground: Rgb(
        [
            235,
            219,
            178,
        ],
    ),
    selection_background: Rgb(
        [
            83,
            78,
            70,
        ],
    ),
    highlight: Rgb(
        [
            254,
            128,
            25,
        ],
    ),
    muted_foreground: Rgb(
        [
            146,
            131,
            116,
        ],
    ),
    bar_groove: Rgb(
        [
            101,
            95,
            83,
        ],
    ),
    spectrum: [
        Rgb(
            [
                184,
                187,
                38,
            ],
        ),
        Rgb(
            [
                250,
                189,
                47,
            ],
        ),
        Rgb(
            [
                251,
                73,
                52,
            ],
        ),
    ],
}
