crates/sifr/src/shell/snapshots/sifr__shell__presentation__tests__every_repo_theme_derives_its_own_palette@ristretto.snap
---
source: crates/sifr/src/shell/presentation.rs
expression: colors
---
Colors {
    background: Rgb(
        [
            18,
            18,
            18,
        ],
    ),
    window_background: Rgb(
        [
            25,
            24,
            23,
        ],
    ),
    text: Rgb(
        [
            232,
            208,
            184,
        ],
    ),
    accent: Rgb(
        [
            224,
            112,
            64,
        ],
    ),
    accent2: Rgb(
        [
            216,
            160,
            80,
        ],
    ),
    selection_foreground: Rgb(
        [
            232,
            208,
            184,
        ],
    ),
    selection_background: Rgb(
        [
            62,
            57,
            51,
        ],
    ),
    highlight: Rgb(
        [
            224,
            112,
            64,
        ],
    ),
    muted_foreground: Rgb(
        [
            144,
            120,
            104,
        ],
    ),
    bar_groove: Rgb(
        [
            82,
            75,
            68,
        ],
    ),
    spectrum: [
        Rgb(
            [
                154,
                170,
                104,
            ],
        ),
        Rgb(
            [
                216,
                160,
                80,
            ],
        ),
        Rgb(
            [
                209,
                90,
                90,
            ],
        ),
    ],
}
