crates/sifr/src/shell/snapshots/sifr__shell__presentation__tests__every_repo_theme_derives_its_own_palette@rose-pine-dawn.snap
---
source: crates/sifr/src/shell/presentation.rs
assertion_line: 85
expression: colors
---
Colors {
    background: Rgb(
        [
            250,
            244,
            237,
        ],
    ),
    window_background: Rgb(
        [
            242,
            236,
            231,
        ],
    ),
    foreground: Rgb(
        [
            87,
            82,
            121,
        ],
    ),
    accent: Rgb(
        [
            215,
            130,
            126,
        ],
    ),
    favorite: Rgb(
        [
            117,
            78,
            26,
        ],
    ),
    selection_foreground: Rgb(
        [
            69,
            65,
            96,
        ],
    ),
    selection_background: Rgb(
        [
            188,
            183,
            193,
        ],
    ),
    highlight: Rgb(
        [
            129,
            78,
            75,
        ],
    ),
    muted_foreground: Rgb(
        [
            121,
            117,
            147,
        ],
    ),
    bar_groove: Rgb(
        [
            198,
            192,
            200,
        ],
    ),
    spectrum: [
        Rgb(
            [
                40,
                105,
                131,
            ],
        ),
        Rgb(
            [
                234,
                157,
                52,
            ],
        ),
        Rgb(
            [
                180,
                99,
                122,
            ],
        ),
    ],
}
